<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2016 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string name="app_name">Earthquake Report</string>
    <string name="near_the">Near the</string>
    <string name="settting_menu_item">Setting</string>
    <string name="settings_title">Earthquake Setting</string>
    <string name="setting_min_magnitude_label">Choose Minimum Magnitude</string>
    <string name="setting_min_magnitude_key" translatable="false">min_magnitude</string>
    <string name="setting_min_magnitude_default" translatable="false">6</string>
    <string name="setting_location">Location</string>
    <string name="setting_location_default">world</string>
    <string name="setting_date">Date Setting</string>
    <string name="setting_date_default">1</string>
</resources>
