<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">

    <EditTextPreference
        android:defaultValue="@string/setting_min_magnitude_default"
        android:inputType="numberDecimal"
        android:key="@string/setting_min_magnitude_key"
        android:selectAllOnFocus="true"
        android:title="@string/setting_min_magnitude_label" />

    <ListPreference
        android:title="@string/setting_location"
        android:dialogTitle="@string/setting_location"
        android:entries="@array/location"
        android:entryValues="@array/location_value"
        android:key="@string/setting_location"
        android:defaultValue="@string/setting_location_default">
    </ListPreference>

    <ListPreference
        android:title="@string/setting_date"
        android:dialogTitle="@string/setting_date"
        android:key="@string/setting_date"
        android:entries="@array/date"
        android:entryValues="@array/date_value"
        android:defaultValue="@string/setting_date_default">
    </ListPreference>
</PreferenceScreen>